--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,46 @@
+@article{hale2020variation,
+  title={Variation in government responses to COVID-19},
+  author={Hale, Thomas and Petherick, Anna and Phillips, Toby and Webster, Samuel},
+  journal={Blavatnik School of Government Working Paper},
+  volume={31},
+  year={2020}
+}
+
+@article{ross2020whale,
+  title={Predicting regions of North Atlantic right whale, Eubalaena glacialis, habitat suitability in the Gulf of Maine in 2050},
+  author={Ross, Camille and Record, Nicholas R and Tupper, Benjamin and Brickman, David and Pendleton, Daniel E},
+  journal={Elementa: Journal of the Anthropocene},
+  volume={in review},
+  year={2020}
+}
+
+@article{kopec2011more,
+  title={A more fulfilling (and frustrating) take on reflexive predictions},
+  author={Kopec, Matthew},
+  journal={Philosophy of science},
+  volume={78},
+  number={5},
+  pages={1249--1259},
+  year={2011},
+  publisher={University of Chicago Press Chicago, IL}
+}
+
+@article{weiss2013sir,
+  title={The SIR model and the foundations of public health},
+  author={Weiss, Howard Howie},
+  journal={Materials matematics},
+  pages={0001--17},
+  year={2013}
+}
+
+@incollection{sabetta2019self,
+  title={Self-Defeating Prophecies: When Sociology Really Matters},
+  author={Sabetta, Lorenzo},
+  booktitle={Anticipation, Agency and Complexity},
+  pages={51--59},
+  year={2019},
+  publisher={Springer}
+}
 @ARTICLE{Figueredo:2009dg,
 	doi = {10.1007/s12110-009-9068-2},
 	url = {https://doi.org/10.1007%2Fs12110-009-9068-2},
@@ -10,6 +53,13 @@
 	author = {Aurelio Jos{\'{e}} Figueredo and Pedro S. A. Wolf},
 	title = {Assortative Pairing and Life History Strategy},
 	journal = {Human Nature}
+}
+
+@misc{dyer2020covid,
+  title={Covid-19: US testing ramps up as early response draws harsh criticism},
+  author={Dyer, Owen},
+  year={2020},
+  publisher={British Medical Journal Publishing Group}
 }
 
 @article{galatin1976optimal,
@@ -75,9 +125,20 @@
   publisher={Elsevier}
 }
 
+@article{record2014paradox,
+  title={The paradox of the “paradox of the plankton”},
+  author={Record, Nicholas R and Pershing, Andrew J and Maps, Fr{\'e}d{\'e}ric},
+  journal={ICES Journal of marine science},
+  volume={71},
+  number={2},
+  pages={236--240},
+  year={2014},
+  publisher={Oxford University Press}
+}
+
 @article{covid2020forecasting,
   title={Forecasting COVID-19 impact on hospital bed-days, ICU-days, ventilator-days and deaths by US state in the next 4 months},
-  author={COVID, IHME and Murray, Christopher JL and others},
+  author={COVID, IHME and Murray, Christopher JL},
   journal={medRxiv},
   year={2020},
   publisher={Cold Spring Harbor Laboratory Press}
