--- a/RecordPershing2020.Rmd
+++ b/RecordPershing2020.Rmd
@@ -68,11 +68,11 @@ $$
 \frac{d\alpha}{dt} &= r\alpha(1-\alpha / K)
 \end{aligned}
 $$
-The fourth equation is formulated so that $\alpha$ approaches an assymptotic contact rate $K$. This is a common functional form in ecological theory [@record2014paradox]. There are likely multiple possible functional forms for $K$. There is some evidence that the contact rate is responsive to infection dynamics in an approximately monotonic way. For example, when government response indices [@hale2020variation] are taken as a proxy for contact rate, and the infection level is scaled to the maximum for each country, a negative relationship appears (Fig 2A). To make the assymptotic contact rate responsive to the infection dynamics, $K$ is a function of $I$:
+The fourth equation is formulated so that $\alpha$ approaches an asymptotic contact rate $K$. This is a common functional form in ecological theory [@record2014paradox]. There are likely multiple possible functional forms for $K$. There is some evidence that the contact rate is responsive to infection dynamics in an approximately monotonic way. For example, when government response indices [@hale2020variation] are taken as a proxy for contact rate, and the infection level is scaled to the maximum for each country, a negative relationship appears (Fig 2A). To make the asymptotic contact rate responsive to the infection dynamics, $K$ is a function of $I$:
 $$K(I) = \frac{\alpha_0 - \alpha_*}{N^2}I^2 + \alpha_*$$
-The two parameters $\alpha_*$ and $\alpha_0$ are respectively the unhindered contact rate, and the reduced contact rate after response measures are in full effect. This gives a declining curve in assymptotic contact rate $K$ as a function of the infection level $I$ (Fig 2B). The total population size is $N=1$ in the normalized case. Finally, we have the parameter $r$, which determines how quickly people adopt response measures--i.e. how quickly they move from one $\alpha$ to another. It is likely that from an empirical point of view, $r$ could have a wide range of values, depending on the community and other contextual information. There are other possibilities for the shape of this curve and for the $\alpha$ equation, with different functional forms and producing a wide range of possible dynamics. The quadratic gives a simple curve where the response gets more intense as infections get higher, which allows us to simulate some simple but realistic properties. As a diagnostic, we use $I_{max}$, the magnitude of the peak infection as the dynamics play out, because of its relevance to health care capacity, as in the COVID-19 pandemic.
+The two parameters $\alpha_*$ and $\alpha_0$ are respectively the unhindered contact rate, and the reduced contact rate after response measures are in full effect. This gives a declining curve in asymptotic contact rate $K$ as a function of the infection level $I$ (Fig 2B). The total population size is $N=1$ in the normalized case. Finally, we have the parameter $r$, which determines how quickly people adopt response measures--i.e. how quickly they move from one $\alpha$ to another. It is likely that from an empirical point of view, $r$ could have a wide range of values, depending on the community and other contextual information. There are other possibilities for the shape of this curve and for the $\alpha$ equation, with different functional forms and producing a wide range of possible dynamics. The quadratic gives a simple curve where the response gets more intense as infections get higher, which allows us to simulate some simple but realistic properties. As a diagnostic, we use $I_{max}$, the magnitude of the peak infection as the dynamics play out, because of its relevance to health care capacity, as in the COVID-19 pandemic.
 
-```{r eval=TRUE, echo=FALSE, fig.height = 3.5, fig.width = 5.5, out.width = "100%", fig.align = "center", fig.cap="(A) Evidence of a relationship between the magnitude of infection and a contact rate index. The contact rate is the inverse of the government response index from Hale et al. (2020), so that a higher index corresponds to a higher contact rate. Infection magnitude is scaled to the maximum for each country. (B) The dependence of the assymptotic contact rate (K) on the population size (I)."}
+```{r eval=TRUE, echo=FALSE, fig.height = 3.5, fig.width = 5.5, out.width = "100%", fig.align = "center", fig.cap="(A) Evidence of a relationship between the magnitude of infection and a contact rate index. The contact rate is the inverse of the government response index from Hale et al. (2020), so that a higher index corresponds to a higher contact rate. Infection magnitude is scaled to the maximum for each country. (B) The dependence of the asymptotic contact rate (K) on the population size (I)."}
 par(mfrow=c(1,2)) 
 
 DATA <- read.csv('./OxCGRT_Download_290420_181530_Full.csv')
@@ -101,7 +101,7 @@ plot(I,K,type='l',lwd = 5,
      ylim=c(0,alphaS*1.1),
      main="B",
      xlab = "Infected population (I)",
-     ylab = "Assymptotic contact rate (K)")
+     ylab = "Asymptotic contact rate (K)")
 axis(2,at=c(alpha0,alphaS),
      labels=c(expression(alpha[0]),expression(alpha['*'])))
 axis(1,at=c(0,1000),
@@ -119,11 +119,11 @@ The objective here is to illustrate potential dynamics of the feedback between f
 
 We evaluate question (1) by looking at how $I_{max}$ depends on $r$ (Fig 3A). Responding to the current level of infection leads to a drop in the infection peak (approximately 8% using this set of parameters), as compared to no response, if the response rate is sufficiently fast. If the response rate is very slow, there is effectively no reduction in the infection peak. There is a sharp transition between these two cases. In this example, a response rate slower than about $r = 0.1$ -- corresponding to a response time of about 10 time units -- makes no notable change in the infection peak. For different parameter values, the threshold levels can be different, but the basic shape of these relationships is consistent across different parameterizations.
 
-When the contact rate is responsive to the forecasted infection peak rather than to the instantaneous infection level (question 2), the shape of the curve is similar (Fig 3A). The reduction in the peak infection is larger, (approximately ~12% drop using this set of parameters, or roughly a 50% improvement over the former case). There is also a notable difference in the needed response time. In this case, a response time of 10 time units ($r=0.1$) is sufficient for most of the drop to occur. Across parameter space, the magnitudes of these differences change, but the pattern is consistent.
+When the contact rate is responsive to the forecasted infection peak rather than to the instantaneous infection level (question 2), the shape of the curve is similar (Fig 3A). The reduction in the peak infection is larger, (approximately 12% drop using this set of parameters, or roughly a 50% improvement over the former case). There is also a notable difference in the needed response time. In this case, a response time of 10 time units ($r=0.1$) is sufficient for most of the drop to occur. Across parameter space, the magnitudes of these differences change, but the pattern is consistent.
 
 We tested the effects of an over- or under-estimate forecast (Fig 3B), with the forecasted value $I_*$ scaled proportionally in the range 0.4 to 1.6. If the forecast is an overestimate, and if the response rate is fast enough, an inaccurate forecast can lower the peak even more than an accurate forecast. An overestimated forecast also gives a larger window of time for response -- i.e. the response rate does not need to be as fast to see a lowering of the peak. If the forecast is an underestimate, however, it leads to a higher peak and narrows the response time window. Finally, if the response rate is very slow, inaccuracies in the forecast in either direction make very little difference. In all of these cases, responding to a forecast is better than not responding at all, due to how we have formulated $K(I)$ as a decreasing function of $I$.
 
-```{r eval=T, echo=F, fig.height = 3.5, fig.width = 5.5, fig.align = "center", fig.cap="(A) The dependence of the infection peak magnitutde on the rate (r) at which the population reduces the contact rate (i.e. adopts response measures). The population responding to current infection levels (black); the population responding to forecasted infection peaks (grey). (B) The dependence of the infection peak levels (contours) on the rate (r) at which the population reduces the contact rate (e.g. adopts social distancing behaviors) and the accuracy of the forecast. In this simulation, the population is responding to forecasted peak infection levels."}
+```{r eval=T, echo=F, fig.height = 3.5, fig.width = 5.5, fig.align = "center", fig.cap="(A) The dependence of the infection peak magnitude on the rate (r) at which the population reduces the contact rate (i.e. adopts response measures). The population responding to current infection levels (black); the population responding to forecasted infection peaks (grey). (B) The dependence of the infection peak levels (contours) on the rate (r) at which the population reduces the contact rate (e.g. adopts social distancing behaviors) and the accuracy of the forecast. In this simulation, the population is responding to forecasted peak infection levels."}
 par(mfrow=c(1,2)) 
 
 library(deSolve)
