--- a/bibliography.bib
+++ b/bibliography.bib
@@ -28,7 +28,7 @@
 @article{weiss2013sir,
   title={The SIR model and the foundations of public health},
   author={Weiss, Howard Howie},
-  journal={Materials matematics},
+  journal={Materials mathematics},
   pages={0001--17},
   year={2013}
 }
