--- a/bibliography.bib
+++ b/bibliography.bib
@@ -146,7 +146,7 @@
 
 @article{tommasi2017managing,
   title={Managing living marine resources in a dynamic environment: the role of seasonal to decadal climate forecasts},
-  author={Tommasi, Desiree and Stock, Charles A and Hobday, Alistair J and Methot, Rick and Kaplan, Isaac C and Eveson, J Paige and Holsman, Kirstin and Miller, Timothy J and Gaichas, Sarah and Gehlen, Marion and others},
+  author={Tommasi, Desiree and Stock, Charles A and Hobday, Alistair J and Methot, Rick and Kaplan, Isaac C and Eveson, J Paige and Holsman, Kirstin and Miller, Timothy J and Gaichas, Sarah and Gehlen, Marion and Pershing, Andrew and Vecchi, Gabriel A and Msadek, Rym and Delworth, Tom and Eakin, C Mark and Haltuch, Melissa A and Séférian, Roland and Spillman, Claire M and Hartog, Jason R and Siedlecki, Samantha and Samhouri, Jameal F and Muhling, Barbara and Asch, Rebecca G and Pinsky, Malin L and Saba, Vincent S and Kapnick, Sarah B and Gaitan, Carlos F and Rykaczewski, Ryan R and Alexander, Michael A and Xue, Y and Pegion, Kathleen V and Lynch, Patrick and Payne, Mark R and Kristiansen, Trond and Lohodey, Patrick and Werner, Francisco E},
   journal={Progress in Oceanography},
   volume={152},
   pages={15--49},
@@ -266,7 +266,7 @@
 
 @article{payne2017lessons,
   title={Lessons from the first generation of marine ecological forecast products},
-  author={Payne, Mark R and Hobday, Alistair J and MacKenzie, Brian R and Tommasi, Desiree and Dempsey, Danielle P and F{\"a}ssler, Sascha MM and Haynie, Alan C and Ji, Rubao and Liu, Gang and Lynch, Patrick D and others},
+  author={Payne, Mark R and Hobday, Alistair J and MacKenzie, Brian R and Tommasi, Desiree and Dempsey, Danielle P and F{\"a}ssler, Sascha MM and Haynie, Alan C and Ji, Rubao and Liu, Gang and Lynch, Patrick D and and Matei, Daniela and Miesner, Anna K. and Mills, Katherine E. and Strand, Kjersti O. and Villarino, Ernesto},
   journal={Frontiers in Marine Science},
   volume={4},
   pages={289},
