--- a/RecordPershing2020.Rmd
+++ b/RecordPershing2020.Rmd
@@ -27,7 +27,7 @@ output:
 
 # Introduction {-}
 
-The field of forecasting is growing rapidly to include many systems [@payne2017lessons]. This growth has magnified many ethical considerations around forecast development, such as conflicts of interest, representation of uncertainty, equity for end users, and unintended consequences, to name a few [@hobday2019ethical]. One challenge that is becoming more common is that forecasts increasinly deal with systems that have human components. In conventional forecasts, such as weather forecasts, human responses do not measurably affect the system in question (Fig 1A). There are more and more cases, however, where human actions are coupled to the system dynamics. Examples include forecasts used in living resource management [@tommasi2017managing], endangered species management [@ross2020whale], and epidemic forecasts [@adam2020special]. Historically, cases like these have often been framed as projections, which present scenarios that are contingent upon different human choices (Fig 1B). 
+The field of forecasting is growing rapidly to include many systems [@payne2017lessons]. This growth has magnified many ethical considerations around forecast development, such as conflicts of interest, representation of uncertainty, equity for end users, and unintended consequences, to name a few [@hobday2019ethical]. One challenge that is becoming more common is that forecasts increasingly deal with systems that have human components. In conventional forecasts, such as weather forecasts, human responses do not measurably affect the system in question (Fig 1A). There are more and more cases, however, where human actions are coupled to the system dynamics. Examples include forecasts used in living resource management [@tommasi2017managing], endangered species management [@ross2020whale], and epidemic forecasts [@adam2020special]. Historically, cases like these have often been framed as projections, which present scenarios that are contingent upon different human choices (Fig 1B). 
 
 In contrast to projections, forecasts provide specific predictions about future events. If humans are changing their behavior in response to information in the forecast, and if that change in behavior alters the outcome of the forecast target, then the forecast is no longer outside of the system, but is instead a dynamically connected component of the system (Fig 1C). This phenomenon, sometimes refered to as "forecast feedback" or "reflexive prediction" has been historically considered to some degree in economic and political forecasting [@galatin1976optimal], but is rarely considered in biological systems. According to the "Law of Forecast Feedback", this type of dynamic can hypothetically produce a recursion paradox, where predictability breaks down entirely [@smith1964law]. The complexity of dealing with forecast feedback or reflexive prediction is a subject of scientific debate, and it's not clear whether a reflexive forecast could ever be verified empirically [@kopec2011more]. As forecasts are increasingly used within the systems they are forecasting, we need to examine the effects that forecasts can have on the dynamics of the system in question.
 
@@ -35,7 +35,7 @@ Epidemic models represent a case where forecasts and human behavior can be very 
 
 Epidemic models are conventionally used for projections, rather than for forecasts. They can estimate the consequences of certain actions, potential dangers, or scenarios. However, in the modern information-rich environment, there is a demand for real-time forecasts for both management and general audiences, and such forecasts of epidemics are increasingly common. Many of the modeling studies that have responded to the COVID-19 outbreak are forecasts [@covid2020forecasting; @roosa2020real; @fanelli2020analysis]. The United States Center for Disease Control has even issued an open call for COVID-19 forecasts through a forecasting challenge (https://github.com/cdcepi/COVID-19-ILI-forecasting), and many research teams and news sites serve forecasts to the public in real time. This raises the question: what is the effect of a forecast on the epidemic dynamics? In most biological forecasts, this type of feedback is not explicitly taken into account. 
 
-We examined this question using the standard susceptible-infected-removed (SIR) epidemic model. The SIR framework underlies many projections and forecasts that form the basis for response strategies for COVID-19 and other epidemics [@adam2020special]. We built forecast feedback into the SIR model by allowing the contact rate to change dynamically in response to different information provided by the SIR equations. In turn, the SIR model dynamics depend on the contact rate, so that there is two-way feedback between the forecast and the other system dynamics. The purpose here is not to fully analyze or characterize the global properties of a particular dynamical model, as there is a whole class of well characterized versions of the SIR model that consider a wide range of additional processes and details [@beretta1995global;@anderson1979population;@takeuchi2000global;@satsuma2004extending;@kyrychko2005global;@batista2020estimation] that one could modify to explore these feedbacks. Rather, we use simulations of a few simple SIR modifications to illustrate important implications of these feedbacks. Examining a system in this way provides a critical analysis of the role of a forecast in a rapidly changing, coupled human system. 
+We examined this question using the standard susceptible-infected-removed (SIR) epidemic model. The SIR framework underlies many projections and forecasts that form the basis for response strategies for COVID-19 and other epidemics [@adam2020special]. We built forecast feedback into the SIR model by allowing the contact rate to change dynamically in response to different information provided by the SIR equations. In turn, the SIR model dynamics depend on the contact rate, so that there is two-way feedback between the forecast and the other system dynamics. The purpose here is not to fully analyze or characterize the global properties of a particular dynamical model, as there is a whole class of well characterized versions of the SIR model that consider a wide range of additional processes and details [@beretta1995global;@anderson1979population;@takeuchi2000global;@satsuma2004extending;@kyrychko2005global;@batista2020estimation] that one could modify to explore these feedbacks. Rather, we use simulations of a few simple SIR modifications to illustrate important implications of these feedbacks. Examining a system in this way provides a critical analysis of the role of a forecast in a rapidly changing coupled human system. 
 
 ```{r, echo=F, fig.width = 5.5, fig.height = 4.5, out.width = "100%", fig.align = "center", fig.cap="(A) The conventional forecasting scheme, where a system informs a forecast, which informs some human response. (B) The conventional scheme for projection, where a range of possible actions produce multiple scenarios (i.e. projections), which can inform action. (C) The forecasting scheme where the human response is part of the system dynamics -- i.e. forecast feedback or reflexive prediction."}
 knitr::include_graphics("Figure1.jpg")
@@ -51,7 +51,7 @@ $$
 \frac{dR}{dt} &= \beta I
 \end{aligned}
 $$
-Here, $S$ is the number of individuals in a population that are susceptible to infection, $I$ is the number of infected individuals, and $R$ is the number of removed individuals (interpreted as recovered/immune, dead, or some combination); $\alpha$ is the contact rate, and $\beta$ is the removal rate. We use the model in normalized form to show general results, rather than those specific to a particular outbreak (Parameter values: $\alpha_*=1$,$\alpha_0=0.2$, $\beta=0.1$; Initial conditions: $S=0.999$, $I=0.001$, $R=0$, $\alpha=1$). The SIR model has been one of the primary tools for making simulations on which control and intervention measures are based, such as social distancing, and shelter in place measures. There are many ways to modify this system of equations to better approximate a particular epidemic. Our interest is in the general effect that model output (either current or forecasted) can have on the dynamics themselves, as mediated through changes in human behavior. The contact rate $\alpha$ is what would likely change with the suggested response measures. A high infection or a severe enough forecast are what motivates measures whose aim is to reduce the contact rate. We therefore test the effect of allowing $\alpha$ to vary as a function of the SIR model output, in a way that is dynamically linked to the other model equations.
+Here, $S$ is the number of individuals in a population that are susceptible to infection, $I$ is the number of infected individuals, and $R$ is the number of removed individuals (interpreted as recovered/immune, dead, or otherwise removed); $\alpha$ is the contact rate, and $\beta$ is the removal rate. The SIR model has been one of the primary tools for making simulations on which control and intervention measures are based, such as social distancing, and shelter in place measures, though other statistical and machine learning tools are also used. There are many ways to modify this system of equations to better approximate a particular epidemic. Our interest is in the general effect that model output (either current or forecasted) can have on the dynamics themselves, as mediated through changes in human behavior. The contact rate $\alpha$ is what would likely change with the suggested response measures. A high infection or a severe enough forecast are what motivates measures whose aim is to reduce the contact rate. We therefore test the effect of allowing $\alpha$ to vary as a function of the SIR model output, in a way that is dynamically linked to the other model equations.
 
 Our examination of this system asks two general questions:
 
@@ -70,7 +70,7 @@ $$
 $$
 The fourth equation is formulated so that $\alpha$ approaches an asymptotic contact rate $K$. This is a common functional form in ecological theory [@record2014paradox]. There are likely multiple possible functional forms for $K$. There is some evidence that the contact rate is responsive to infection dynamics in an approximately monotonic way. For example, when government response indices [@hale2020variation] are taken as a proxy for contact rate, and the infection level is scaled to the maximum for each country, a negative relationship appears (Fig 2A). To make the asymptotic contact rate responsive to the infection dynamics, $K$ is a function of $I$:
 $$K(I) = \frac{\alpha_0 - \alpha_*}{N^2}I^2 + \alpha_*$$
-The two parameters $\alpha_*$ and $\alpha_0$ are respectively the unhindered contact rate, and the reduced contact rate after response measures are in full effect. This gives a declining curve in asymptotic contact rate $K$ as a function of the infection level $I$ (Fig 2B). The total population size is $N=1$ in the normalized case. Finally, we have the parameter $r$, which determines how quickly people adopt response measures--i.e. how quickly they move from one $\alpha$ to another. It is likely that from an empirical point of view, $r$ could have a wide range of values, depending on the community and other contextual information. There are other possibilities for the shape of this curve and for the $\alpha$ equation, with different functional forms and producing a wide range of possible dynamics. The quadratic gives a simple curve where the response gets more intense as infections get higher, which allows us to simulate some simple but realistic properties. As a diagnostic, we use $I_{max}$, the magnitude of the peak infection as the dynamics play out, because of its relevance to health care capacity, as in the COVID-19 pandemic.
+The two parameters $\alpha_*$ and $\alpha_0$ are respectively the unhindered contact rate, and the reduced contact rate after response measures are in full effect. This gives a declining curve in asymptotic contact rate $K$ as a function of the infection level $I$ (Fig 2B). Finally, we have the parameter $r$, which determines how quickly people adopt response measures--i.e. how quickly they move from one $\alpha$ to another. It is likely that from an empirical point of view, $r$ could have a wide range of values, depending on the community and other contextual information. There are other possibilities for the shape of this curve and for the $\alpha$ equation, with different functional forms and producing a wide range of possible dynamics. The quadratic gives a simple curve where the response gets more intense as infections get higher, which allows us to simulate some simple but realistic properties. We use the model in normalized form to show general results, rather than those specific to a particular outbreak (Parameter values: $\alpha_*=1$,$\alpha_0=0.2$, $\beta=0.1$; Initial conditions: $S=0.999$, $I=0.001$, $R=0$, $\alpha=1$). With the equations normalized, the total population size is always $N = 1$. As a diagnostic, we use $I_{max}$, the magnitude of the peak infection as the dynamics play out, because of its relevance to health care capacity, as in the COVID-19 pandemic.
 
 ```{r eval=TRUE, echo=FALSE, fig.height = 3.5, fig.width = 5.5, out.width = "100%", fig.align = "center", fig.cap="(A) Evidence of a relationship between the magnitude of infection and a contact rate index. The contact rate is the inverse of the government response index from Hale et al. (2020), so that a higher index corresponds to a higher contact rate. Infection magnitude is scaled to the maximum for each country. (B) The dependence of the asymptotic contact rate (K) on the population size (I)."}
 par(mfrow=c(1,2)) 
@@ -261,7 +261,7 @@ We have to be cautious of using forecasts that do not take into account the effe
 # Acknowledgements {-}
 
 
-We would like to acknowledge the institutions around the world that are working hard to make epidemic data and forecasts freely available. We thank the editor and two reviewers for helpful comments.
+We would like to acknowledge the institutions around the world that are working hard to make epidemic data and forecasts freely available. We thank the editor and two reviewers for helpful comments. PISOF manuscript #11.
 
 # References
 \setlength{\parindent}{-0.2in}
